bookinfo-plain/bookinfoVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
  - productpage.bookinfo-test.svc.cluster.local
  http:
  - route:
    - destination:
        host: productpage.bookinfo-test.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews-stable
  http:
  - route:
    - destination:
        host: reviews-stable
        port:
          number: 9080
      weight: 100
    - destination:
        host: reviews-canary
        port:
          number: 9080
      weight: 0
